[package]
name = "tests"
version = "0.1.0"
authors = ["Igor Tonkopryadchenko <gtonky@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
scopeguard = "1.0.0"
chrono = "0.4.9"
fern = "0.5.8"
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_warn"] }
tracing-subscriber = "0.1.5"
